[package]
name = "nuts"
version = "0.1.0"
authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
edition = "2018"

[dependencies]
nom = "4.2.0"
indexmap = "^1.0.0"
fixedbitset = "0.1.9"

[dev-dependencies]
proptest = "0.9.4"
proptest-derive = { path = "../proptest/proptest-derive" }
#proptest-derive = "0.1.0"

[profile.release]
lto = true
opt-level = 3
debug = true
panic = 'unwind'