[package]
name = "nuts"
version = "0.1.0"
description = "Library to parse MPEG transport streams."
authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/alessandrod/nuts"
keywords = ["ts", "mpegts", "transport stream"]
categories = ["multimedia", "parser-implementations"]
edition = "2018"

[dependencies]
nom = "4.2.0"
fixedbitset = "0.1.9"

[dev-dependencies]
proptest = "0.9.4"
proptest-derive = { git = "https://github.com/alessandrod/proptest", branch = "nested-tuple"}

[profile.release]
lto = true
opt-level = 3
debug = true
panic = 'unwind'